# registrar

./: README.md  pyproject.toml
scripts/: env.sh  example.sh
src/registrar/app/: registraring.py
src/registrar/app/cli/: registrar.py
src/registrar/app/cli/commands/: start.py  up.py
src/registrar/core/: apiing.py  authing.py  initializing.py  oobiing.py  serving.py
src/registrar/core/sentinel/: __init__.py  config.py  handler.py
src/registrar/core/sentinel/handlers/: __init__.py  kel_handler.py
tests/: __init__.py
tests/app/: __init__.py  test_registraring.py
tests/core/: __init__.py  test_apiing.py  test_authing.py  test_serving.py
